fixed the crazy page resizing on mobile experience, also fixed the spelling of the 6th mountain pic file name

--- a/source_sass/_base.scss
+++ b/source_sass/_base.scss
@@ -300,6 +300,10 @@ video {
     min-height:50px
 }
 
+.anim_contain {
+  overflow:hidden
+}
+
 //CSS3 animation stuff:
 .trickyP {
   animation-duration: 1s;
